Accessibility should always serialize an entire block when something changes.

Whenever we post a change to the accessibility tree affecting an element,
if that element isn't block-level we should walk up to the nearest block-level
element and serialize the whole thing.

The reason is that we have fields like nextOnLine and previousOnLine that
depend on the line layout, which can change when changes happen to inline
elements.

Eventually I'd like to have a better concept of marking part of the
accessibility tree "dirty" as a way of cleaning up this logic, but
in the meantime this is hopefully a good fix with a test that can
potentially help fix some real bugs now.

Bug: 843746, 651614
Change-Id: I411a13c63b0c88ab225393b5287cb87a5887565b
Reviewed-on: https://chromium-review.googlesource.com/1062661
Reviewed-by: David Tseng <dtseng@chromium.org>
Commit-Queue: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576249}
Former-commit-id: c101cb728aecdd2bb77d29ebe8deaee47261f65e